--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.4",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "rul": "^2.0.2"
